ui: added flexboxes for the needed information

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 
 <head>
+    <header> PORTFOLIO</header>
     <div class="flex-container">
+        <h1>About me</h1>
+
         <span>
 
 
+            <!-- autobiography
+featured photo
+deatils of our skills reltaed to management 
+web programming
 
+information abt previous projects-->
 
 
         </span>
+    </div>
+    <div class="flex-container">
+        <h1>Skills</h1>
+    </div>
+    <div class="flex-container">
+        <h1>Previous Projects</h1>
     </div>
 </head>
