chore: added photo and autobiography

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
+<html>
 
 <head>
+    <link rel="stylesheet" href="mystyle.css">
+</head>
+
+<body>
     <header> PORTFOLIO</header>
     <div class="flex-container">
         <h1>About me</h1>
-
-        <span>
-
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMXqmDjl2oLwqvdNb0B-gtU4Egz1j5UI0fGA&s"
+            alt="Medium-haired Yohann at a Coffee Shop">
+        <div>
+            <br>
+            Hello! I'm Yohann, a budding Software Engineer with expertise in Frontend UX/UI specializing in webpages for
+            Japanese speakers. I'm passionate about Web Development and Language Education. Hope to speak to you soon.
 
             <!-- autobiography
 featured photo
@@ -16,12 +24,18 @@ web programming
 information abt previous projects-->
 
 
-        </span>
+        </div>
     </div>
     <div class="flex-container">
         <h1>Skills</h1>
+        <div> HTML, CSS, Javascript, SQL, Python, MongoDB</div>
+        <div> ENglish, Filipino, Japanese </div>
     </div>
     <div class="flex-container">
         <h1>Previous Projects</h1>
+        <div>Nutrition Optimizer in R using RShiny for GUI</div>
     </div>
-</head>
+
+</body>
+
+</a>/html>
