docs: added documentation

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,35 +5,36 @@
     <link rel="stylesheet" href="mystyle.css">
 </head>
 
-<body>
+<body class="flex-container">
     <header> PORTFOLIO</header>
     <div class="flex-container">
-        <h1>About me</h1>
+        <h2>About me</h2>
+        <!-- autobiography + featured photo-->
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMXqmDjl2oLwqvdNb0B-gtU4Egz1j5UI0fGA&s"
             alt="Medium-haired Yohann at a Coffee Shop">
-        <div>
+        <p>
             <br>
             Hello! I'm Yohann, a budding Software Engineer with expertise in Frontend UX/UI specializing in webpages for
             Japanese speakers. I'm passionate about Web Development and Language Education. Hope to speak to you soon.
 
-            <!-- autobiography
-featured photo
-deatils of our skills reltaed to management 
-web programming
-
-information abt previous projects-->
 
 
-        </div>
+
+
+
+
+        </p>
     </div>
     <div class="flex-container">
-        <h1>Skills</h1>
-        <div> HTML, CSS, Javascript, SQL, Python, MongoDB</div>
-        <div> ENglish, Filipino, Japanese </div>
+        <!-- deatils of our skills reltaed to management web programming-->
+        <h2>Skills</h2>
+        <p> HTML, CSS, Javascript, SQL, Python, MongoDB</p>
+        <p> ENglish, Filipino, Japanese </p>
     </div>
     <div class="flex-container">
-        <h1>Previous Projects</h1>
-        <div>Nutrition Optimizer in R using RShiny for GUI</div>
+        <!--information abt previous projects-->
+        <h2>Previous Projects</h2>
+        <p>Nutrition Optimizer in R using RShiny for GUI</p>
     </div>
 
 </body>
