fix: edited header tags to match css

--- a/index.html
+++ b/index.html
@@ -3,40 +3,46 @@
 
 <head>
     <link rel="stylesheet" href="mystyle.css">
+
+    <header> PORTFOLIO</header>
 </head>
 
-<body class="flex-container">
-    <header> PORTFOLIO</header>
-    <div class="flex-container">
-        <h2>About me</h2>
+<body>
+    <h1>About me</h1>
+    <div class="flex-container information">
         <!-- autobiography + featured photo-->
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMXqmDjl2oLwqvdNb0B-gtU4Egz1j5UI0fGA&s"
-            alt="Medium-haired Yohann at a Coffee Shop">
-        <p>
+        <br>
+        <div>
+            <img class="photos"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMXqmDjl2oLwqvdNb0B-gtU4Egz1j5UI0fGA&s"
+                alt="Medium-haired Yohann at a Coffee Shop">
+        </div>
+        <span class="information">
             <br>
-            Hello! I'm Yohann, a budding Software Engineer with expertise in Frontend UX/UI specializing in webpages for
-            Japanese speakers. I'm passionate about Web Development and Language Education. Hope to speak to you soon.
-
-
-
-
-
-
-
-        </p>
+            Hello! I'm Yohann, a budding Software Engineer with expertise in Frontend UX/UI specializing in webpages
+            for
+            Japanese speakers. I'm passionate about Web Development and Language Education. Hope to speak to you
+            soon.
+        </span>
     </div>
+
+
+    <h1>Skills</h1>
+
     <div class="flex-container">
         <!-- deatils of our skills reltaed to management web programming-->
-        <h2>Skills</h2>
-        <p> HTML, CSS, Javascript, SQL, Python, MongoDB</p>
-        <p> ENglish, Filipino, Japanese </p>
+
+        <p> HTML, CSS, Javascript, SQL, Python, MongoDB, English, Filipino, Japanese </p>
     </div>
+    <h1>Previous Projects</h1>
     <div class="flex-container">
         <!--information abt previous projects-->
-        <h2>Previous Projects</h2>
+
         <p>Nutrition Optimizer in R using RShiny for GUI</p>
     </div>
 
 </body>
 
-</a>/html>
+</a>
+
+</html>
