--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMXqmDjl2oLwqvdNb0B-gtU4Egz1j5UI0fGA&s"
                 alt="Medium-haired Yohann at a Coffee Shop">
         </div>
-        <span class="information">
+        <p class="information">
             <br>
             Hello! I'm Yohann, a budding Software Engineer with expertise in Frontend UX/UI specializing in webpages
             for
             Japanese speakers. I'm passionate about Web Development and Language Education. Hope to speak to you
             soon.
-        </span>
+        </p>
     </div>
 
 
@@ -32,13 +32,25 @@
     <div class="flex-container">
         <!-- deatils of our skills reltaed to management web programming-->
 
-        <p> HTML, CSS, Javascript, SQL, Python, MongoDB, English, Filipino, Japanese </p>
+        <p class="information">
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Javascript</li>
+            <li>SQL</li>
+            <li>Python</li>
+            <li>MongoDB</li>
+            <li>English</li>
+            <li>Filipino</li>
+            <li>Japanese</li>
+        </ul>
+        </p>
     </div>
     <h1>Previous Projects</h1>
     <div class="flex-container">
         <!--information abt previous projects-->
 
-        <p>Nutrition Optimizer in R using RShiny for GUI</p>
+        <p class="information">Nutrition Optimizer in R using RShiny for GUI</p>
     </div>
 
 </body>
