style: added headers for list

--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 
 <head>
     <link rel="stylesheet" href="mystyle.css">
+    <header>MY PORTFOLIO WEBSITE</header>
+    <div class="topnav">
+        <a href="#aboutme">About Me</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
+    </div>
+    <img class="photos"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMXqmDjl2oLwqvdNb0B-gtU4Egz1j5UI0fGA&s"
+        alt="Medium-haired Yohann at a Coffee Shop">
 
-    <header> PORTFOLIO</header>
+
 </head>
 
 <body>
@@ -13,16 +22,17 @@
         <!-- autobiography + featured photo-->
         <br>
         <div>
-            <img class="photos"
-                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMXqmDjl2oLwqvdNb0B-gtU4Egz1j5UI0fGA&s"
-                alt="Medium-haired Yohann at a Coffee Shop">
+
         </div>
         <p class="information">
             <br>
             Hello! I'm Yohann, a budding Software Engineer with expertise in Frontend UX/UI specializing in webpages
             for
-            Japanese speakers. I'm passionate about Web Development and Language Education. Hope to speak to you
+            Japanese speakers. I'm passionate about Web Development and Language Education.
+            I love working with teams and getting to see how each team member contributes to the project. Hope to speak
+            to you
             soon.
+
         </p>
     </div>
 
@@ -34,22 +44,27 @@
 
         <p class="information">
         <ul>
+            <h3 class="information">Technical Skills</h3>
             <li>HTML</li>
             <li>CSS</li>
             <li>Javascript</li>
             <li>SQL</li>
             <li>Python</li>
             <li>MongoDB</li>
+            <h3 class="information">Other Skills</h3>
             <li>English</li>
             <li>Filipino</li>
             <li>Japanese</li>
+            <li>Management</li>
+            <li>Communication</li>
+            <li>Leadership</li>
         </ul>
         </p>
     </div>
     <h1>Previous Projects</h1>
     <div class="flex-container">
         <!--information abt previous projects-->
-
+        <h3 class="information">Coding Projects and Participations</h3>
         <p class="information">Nutrition Optimizer in R using RShiny for GUI</p>
     </div>
 
