fix: made navbar links work

--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
     </div>
-    <img class="photos"
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMXqmDjl2oLwqvdNb0B-gtU4Egz1j5UI0fGA&s"
-        alt="Medium-haired Yohann at a Coffee Shop">
+    <br>
+    <div>
+        <img class="photos"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMXqmDjl2oLwqvdNb0B-gtU4Egz1j5UI0fGA&s"
+            alt="Medium-haired Yohann at a Coffee Shop">
+    </div>
 
 
 </head>
 
 <body>
-    <h1>About me</h1>
+    <h1 id="aboutme">About me</h1>
     <div class="flex-container information">
         <!-- autobiography + featured photo-->
         <br>
@@ -37,12 +40,10 @@
     </div>
 
 
-    <h1>Skills</h1>
+    <h1 id="skills">Skills</h1>
 
     <div class="flex-container">
         <!-- deatils of our skills reltaed to management web programming-->
-
-        <p class="information">
         <ul>
             <h3 class="information">Technical Skills</h3>
             <li>HTML</li>
@@ -59,13 +60,17 @@
             <li>Communication</li>
             <li>Leadership</li>
         </ul>
-        </p>
     </div>
-    <h1>Previous Projects</h1>
+
+    <h1 id="projects">Previous Projects</h1>
     <div class="flex-container">
         <!--information abt previous projects-->
         <h3 class="information">Coding Projects and Participations</h3>
-        <p class="information">Nutrition Optimizer in R using RShiny for GUI</p>
+        <ul>
+            <li>Nutrition Optimizer in R using RShiny for GUI (CMSC150)</li>
+            <li>Song, Album, and Playlist storage in C (CMSC21)</li>
+            <li>Pizza Delivery From in HTML (CMSC12)</li>
+        </ul>
     </div>
 
 </body>
